crates/context-anchors/tests/integration/snapshots/integration__cli__json_report.snap
---
source: crates/context-anchors/tests/integration/cli.rs
expression: scrubbed
---
{
  "diagnostics": [
    {
      "code": "alias-duplicate",
      "locations": [
        {
          "byte_end": 53,
          "byte_start": 38,
          "col": 39,
          "line": 1,
          "path": "docs/b.md",
          "region": "prose",
          "root": "repo"
        },
        {
          "byte_end": 69,
          "byte_start": 54,
          "col": 55,
          "line": 1,
          "path": "docs/b.md",
          "region": "prose",
          "root": "repo"
        }
      ],
      "message": "alias `D` is declared more than once in `docs/b.md` (root `repo`)",
      "severity": "error"
    },
    {
      "code": "duplicate-anchor",
      "locations": [
        {
          "byte_end": 12,
          "byte_start": 0,
          "col": 1,
          "line": 1,
          "path": "docs/a.md",
          "region": "prose",
          "root": "repo"
        },
        {
          "byte_end": 12,
          "byte_start": 0,
          "col": 1,
          "line": 1,
          "path": "docs/b.md",
          "region": "prose",
          "root": "repo"
        }
      ],
      "message": "anchor id `dup` is declared more than once in root `repo`",
      "severity": "error"
    },
    {
      "code": "alias-undeclared",
      "hint": "declare it once in this file: `@ref[target as Nope]`",
      "locations": [
        {
          "byte_end": 57,
          "byte_start": 50,
          "col": 51,
          "line": 1,
          "path": "docs/a.md",
          "region": "prose",
          "root": "repo"
        }
      ],
      "message": "alias `Nope` is not declared in `docs/a.md` (root `repo`)",
      "severity": "error"
    },
    {
      "code": "malformed-marker",
      "locations": [
        {
          "byte_end": 37,
          "byte_start": 13,
          "col": 14,
          "line": 1,
          "path": "docs/b.md",
          "region": "prose",
          "root": "repo"
        }
      ],
      "message": "malformed @ref: invalid target `docs/a.md#Foo::bar`: symbol name is qualified with `::`; a reference asserts that a declaration with this name exists somewhere in the file, so give the unqualified name",
      "severity": "error"
    },
    {
      "code": "malformed-marker",
      "locations": [
        {
          "byte_end": 49,
          "byte_start": 44,
          "col": 45,
          "line": 1,
          "path": "docs/a.md",
          "region": "prose",
          "root": "repo"
        }
      ],
      "message": "malformed @ref: missing closing `]` on the same line",
      "severity": "error"
    },
    {
      "code": "anchor-missing",
      "locations": [
        {
          "byte_end": 27,
          "byte_start": 13,
          "col": 14,
          "line": 1,
          "path": "docs/a.md",
          "region": "prose",
          "root": "repo"
        }
      ],
      "message": "unknown anchor id `missing` in root `repo`",
      "severity": "error"
    },
    {
      "code": "no-grammar",
      "hint": "no bundled grammar for `.ex`; symbol references into these files cannot be checked",
      "locations": [
        {
          "byte_end": 30,
          "byte_start": 3,
          "col": 4,
          "line": 1,
          "path": "src/y.rs",
          "region": "comment",
          "root": "repo"
        }
      ],
      "message": "no grammar for `src/thing.ex`; symbol references into it were not checked",
      "severity": "unverified"
    },
    {
      "code": "root-absent",
      "hint": "root `claude` is declared at [ROOT]/../not-there; create it, or fix `[roots] claude` in anchr.toml",
      "locations": [
        {
          "byte_end": 43,
          "byte_start": 28,
          "col": 29,
          "line": 1,
          "path": "docs/a.md",
          "region": "prose",
          "root": "repo"
        }
      ],
      "message": "root `claude` is not present; references into it were not checked",
      "severity": "unverified"
    }
  ],
  "roots": [
    {
      "dir": "[ROOT]",
      "name": "repo"
    }
  ],
  "schema": 1,
  "summary": {
    "alias_uses": 1,
    "anchors": 2,
    "errors": 6,
    "files_scanned": 3,
    "refs_checked": 5,
    "refs_resolved": 2,
    "roots_scanned": 1,
    "strict": false,
    "unverified": 2
  }
}
